--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -1,2 +1,11 @@
-<h1>Events#index</h1>
-<p>Find me in app/views/events/index.html.erb</p>
+<br><br>
+<% @events.each do |event| %>
+<strong>Titre</strong> : <%= event.title %> <br>
+<strong>Commence le</strong> : <%= event.start_date.strftime('%d-%m-%Y') %> <br>
+<strong>Durée</strong> : <%= event.duration %> minutes <br>
+<strong>Description</strong> : <%= event.description %> <br>
+<strong>Prix</strong> : <%= event.price %> <br>
+<strong>Lieux</strong> : <%= event.location %> <br>
+<strong>Crée par</strong> : <%= event.user.first_name %> <%= event.user.last_name %>
+<br><br>
+<%end%>
