--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,2 +1,32 @@
-<h1>Users#edit</h1>
-<p>Find me in app/views/users/edit.html.erb</p>
+<div class="container mt-5 form-group">
+
+    <div class= "bg-light container fieldset mt-3 mr3 pt-3 fieldset col-lg-4 ">
+    
+        <h1 class="text-center">Modifier vos informations</h1>
+        <p class="border-bottom">
+        
+      
+        <%= form_for @user do |f| %>
+        
+            <%= f.text_field :first_name, class: "form-control", placeholder: "Prénom" %>
+            
+            <br>
+
+             <%= f.text_field :last_name, class: "form-control", placeholder: "Nom"  %>
+
+            <br>
+
+             <%= f.text_area :description, class: "form-control", placeholder: "Description"  %>
+            
+            <br>
+              
+            <div class="form-group text-center">
+
+                <button type="submit" class=" float-right btn btn-success">Appliquer</button>
+
+           </div>
+
+    <% end %>
+
+    </div>
+</div>
